[package]
name = "web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = "0.11.22"
tokio = {version="1.34.0", features=["full"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0.108"
regex = "1.10.2"
axum = "0.6.20"
